feat: : sparkles: Add staking lock and non-lock

--- a/token-stake/booster.ipynb
+++ b/token-stake/booster.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZpFinvO57cKU6ys8cbEff",
+      "authorship_tag": "ABX9TyPwZ/v61KfTM0cAnnr3hlgh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,14 +37,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 33,
       "metadata": {
         "id": "7iUsnT_ZUH3r"
       },
       "outputs": [],
       "source": [
         "import calendar\n",
-        "import time"
+        "import time\n",
+        "import datetime\n",
+        "from datetime import datetime\n",
+        "from datetime import timedelta"
       ]
     },
     {
@@ -57,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FaKNMtxjUXHE",
-        "outputId": "b183dd81-3777-417e-d584-162cda6e4c4b"
+        "outputId": "038da1f7-c18a-4b4c-88e7-77a05a76e2b9"
       },
       "execution_count": 2,
       "outputs": [
@@ -65,7 +68,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1675243919"
+              "1675305783"
             ]
           },
           "metadata": {},
@@ -161,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oGKJ059BUZdS",
-        "outputId": "bd7eeb4c-a43e-4f5a-bff2-df5c1d49f798"
+        "outputId": "c9368fcd-92bb-4361-99c9-72b5ca0d065a"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +174,7 @@
           "text": [
             "<>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
             "<>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-            "<ipython-input-4-529cba119442>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+            "<ipython-input-3-529cba119442>:68: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
             "  assert(self.rewardRate > 0, \"reward rate = 0\")\n"
           ]
         }
@@ -219,7 +222,8 @@
         "MAX_WITHDRAW_FEE = 500 # 5%\n",
         "MAX_OVERDUE_FEE = 100 * 1e10 # 100%\n",
         "MAX_WITHDRAW_FEE_PERIOD = 7 *60*60*24 # 1 week\n",
-        "MIN_LOCK_DURATION = 7 *60*60*24\n",
+        "# MIN_LOCK_DURATION = 7 *60*60*24\n",
+        "MIN_LOCK_DURATION = 3 *60\n",
         "MAX_LOCK_DURATION_LIMIT = 1000 * 60*60*24\n",
         "BOOST_WEIGHT_LIMIT = 5000 * 1e10\n",
         "PRECISION_FACTOR = 1e12\n",
@@ -231,7 +235,8 @@
         "DURATION_FACTOR = 365 *60*60*24\n",
         "BOOST_WEIGHT = 100 * 1e10\n",
         "\n",
-        "UNLOCK_FREE_DURATION = 7 *60*60*24\n",
+        "# UNLOCK_FREE_DURATION = 7 *60*60*24\n",
+        "UNLOCK_FREE_DURATION = 3 *60\n",
         "DURATION_FACTOR_OVERDUE = 180 *60*60*24\n",
         "\n",
         "performanceFee = 200  # 2%\n",
@@ -248,7 +253,7 @@
         "        self.address = 'boostPool'\n",
         "        self.balanceOfToken = 0\n",
         "\n",
-        "        self.userInfo = {\"address_0\", UserInfo()}\n",
+        "        self.userInfo = {\"address_0\": UserInfo(), \"alice\": UserInfo(), \"bob\": UserInfo(), \"kite\": UserInfo()}\n",
         "\n",
         "        self.rewardDistributor = rewardDistributor\n",
         "        self.totalShares = 0\n",
@@ -324,6 +329,7 @@
         "            print('==> lock', to, user.lockedAmount, user.shares)\n",
         "        else:\n",
         "            extBoostShares = (extBoostWeightOfUser * currentShares) / PRECISION_FACTOR\n",
+        "            print(\"not locking, extBoostShares\", extBoostShares)\n",
         "            currentShares += extBoostShares\n",
         "            user.shares += currentShares\n",
         "            userBoostedShare = (extBoostWeightOfUser * currentAmount) / PRECISION_FACTOR\n",
@@ -340,7 +346,7 @@
         "\n",
         "    def withdraw(self, shares, amount, to):\n",
         "        user = self.userInfo[to]\n",
-        "        assert shares <= user.shares, \"Withdraw amount exceeds balanc\"\n",
+        "        assert shares <= user.shares, \"Withdraw amount exceeds balance\"\n",
         "        assert user.lockEndTime < self.blockTimestamp(), \"Still in lock\"\n",
         "\n",
         "        currentShares = shares\n",
@@ -402,7 +408,7 @@
         "                self.totalShares -= user.shares\n",
         "                \n",
         "                if user.locked and (user.lockEndTime + UNLOCK_FREE_DURATION) < self.blockTimestamp():\n",
-        "                    earnAmount = currentAmount - user.totalLockedAmount\n",
+        "                    earnAmount = currentAmount - user.lockedAmount\n",
         "                    overdueDuration = self.blockTimestamp() - user.lockEndTime - UNLOCK_FREE_DURATION\n",
         "                    if overdueDuration > DURATION_FACTOR_OVERDUE:\n",
         "                        overdueDuration = DURATION_FACTOR_OVERDUE\n",
@@ -425,12 +431,12 @@
         "                    user.locked = False\n",
         "                    user.lockStartTime = 0\n",
         "                    user.lockEndTime = 0\n",
-        "                    totalLockedAmount -= user.lockedAmount\n",
+        "                    self.totalLockedAmount -= user.lockedAmount\n",
         "                    user.lockedAmount = 0\n",
         "                    print('==> unlock', to, currentAmount)\n",
         "    \n",
         "    def _balanceOf(self):\n",
-        "        return self._balanceOf()\n",
+        "        return self.balanceOfToken + self.totalBoostDebt\n",
         "        \n",
         "    \n",
         "    def blockTimestamp(self):\n",
@@ -441,14 +447,310 @@
       "metadata": {
         "id": "KAoKnlSVUfhG"
       },
-      "execution_count": 6,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Init"
+      ],
+      "metadata": {
+        "id": "BgVNLBAOFLSY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rewardDistributor = SimepleStakingRewards()\n",
+        "\n",
+        "pool = BoostPool(rewardDistributor)"
+      ],
+      "metadata": {
+        "id": "mZOSkKpdB3fM"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Staking without Lock"
+      ],
+      "metadata": {
+        "id": "r4wdY1MCEOld"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alice staking\n",
+        "\n",
+        "alice = \"alice\"\n",
+        "stakingAmount = 100e18\n",
+        "\n",
+        "pool.deposit(stakingAmount, 0, alice)\n",
+        "\n",
+        "print(\"user infos\", pool.userInfo[alice].getAll())\n",
+        "\n",
+        "print(\"pool balanceOfToken\", pool.balanceOfToken)\n",
+        "print(\"pool totalShares\", pool.totalShares)\n",
+        "print(\"pool totalBoostDebt\", pool.totalBoostDebt)\n",
+        "print(\"pool totalLockedAmount\", pool.totalLockedAmount)\n",
+        "print(\"pool harvestRewards\", pool.harvestRewards)"
+      ],
+      "metadata": {
+        "id": "iKbgmMRxtv45",
+        "outputId": "9f40881e-7e9d-49a3-9d52-48248cc041cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "not locking, extBoostShares 100000000.0\n",
+            "user infos {'shares': 1.000000000001e+20, 'lastDepositedTime': 1675306759, 'tokenAtLastUserAction': 9.99999999999e+19, 'lastUserActionTime': 1675306759, 'lockStartTime': 0, 'lockEndTime': 0, 'userBoostedShare': 100000000.0, 'locked': False, 'lockedAmount': 0}\n",
+            "pool balanceOfToken 1e+20\n",
+            "pool totalShares 1.000000000001e+20\n",
+            "pool totalBoostDebt 100000000.0\n",
+            "pool totalLockedAmount 0\n",
+            "pool harvestRewards 0.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iKbgmMRxtv45"
+        "id": "Qrf8VCNJCzRz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alice staking again\n",
+        "\n",
+        "stakingAmount2 = 50e18\n",
+        "\n",
+        "pool.deposit(stakingAmount2, 0, alice)\n",
+        "\n",
+        "print(\"T2 user infos\", pool.userInfo[alice].getAll())\n",
+        "\n",
+        "print(\"pool balanceOfToken\", pool.balanceOfToken)\n",
+        "print(\"pool totalShares\", pool.totalShares)\n",
+        "print(\"pool totalBoostDebt\", pool.totalBoostDebt)\n",
+        "print(\"pool totalLockedAmount\", pool.totalLockedAmount)\n",
+        "print(\"pool harvestRewards\", pool.harvestRewards)"
+      ],
+      "metadata": {
+        "id": "JeMWDZ0LDWwB",
+        "outputId": "54f96f70-8899-4f0e-e6b9-0ea4d10a8d01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "not locking, extBoostShares 49999999.99995\n",
+            "T2 user infos {'shares': 1.499999999999e+20, 'lastDepositedTime': 1675306763, 'tokenAtLastUserAction': 1.4999999999995e+20, 'lastUserActionTime': 1675306763, 'lockStartTime': 0, 'lockEndTime': 0, 'userBoostedShare': 50000000.0, 'locked': False, 'lockedAmount': 0}\n",
+            "pool balanceOfToken 1.5e+20\n",
+            "pool totalShares 1.499999999999e+20\n",
+            "pool totalBoostDebt 50000000.0\n",
+            "pool totalLockedAmount 0\n",
+            "pool harvestRewards 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alice withdraw\n",
+        "\n",
+        "shares = 1.499999999999e+20\n",
+        "\n",
+        "outAmount = pool.withdraw(shares, 0, alice)\n",
+        "print(\"withdraw token amount\", outAmount)\n",
+        "print(\"after withdraw user infos\", pool.userInfo[alice].getAll())\n",
+        "\n",
+        "print(\"pool balanceOfToken\", pool.balanceOfToken)\n",
+        "print(\"pool totalShares\", pool.totalShares)\n",
+        "print(\"pool totalBoostDebt\", pool.totalBoostDebt)\n",
+        "print(\"pool totalLockedAmount\", pool.totalLockedAmount)\n",
+        "print(\"pool harvestRewards\", pool.harvestRewards)\n"
+      ],
+      "metadata": {
+        "id": "q1M9o3zYDfwt",
+        "outputId": "35965089-ef00-4bed-9436-3ac95aaf7663",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "withdraw token amount 1.5e+20\n",
+            "after withdraw user infos {'shares': 0.0, 'lastDepositedTime': 1675306763, 'tokenAtLastUserAction': 0, 'lastUserActionTime': 1675306772, 'lockStartTime': 0, 'lockEndTime': 0, 'userBoostedShare': 0, 'locked': False, 'lockedAmount': 0}\n",
+            "pool balanceOfToken 0.0\n",
+            "pool totalShares 0.0\n",
+            "pool totalBoostDebt 0.0\n",
+            "pool totalLockedAmount 0\n",
+            "pool harvestRewards 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OCd-PKcOD6nS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Staking with lock"
+      ],
+      "metadata": {
+        "id": "1rgXbtGuEVVf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alice staking\n",
+        "\n",
+        "alice = \"alice\"\n",
+        "stakingAmount = 100e18\n",
+        "\n",
+        "pool.deposit(stakingAmount, MIN_LOCK_DURATION, alice)\n",
+        "\n",
+        "print(\"user infos\", pool.userInfo[alice].getAll())\n",
+        "\n",
+        "print(\"pool balanceOfToken\", pool.balanceOfToken)\n",
+        "print(\"pool totalShares\", pool.totalShares)\n",
+        "print(\"pool totalBoostDebt\", pool.totalBoostDebt)\n",
+        "print(\"pool totalLockedAmount\", pool.totalLockedAmount)\n",
+        "print(\"pool harvestRewards\", pool.harvestRewards)"
+      ],
+      "metadata": {
+        "id": "kGfipG9hEXpR",
+        "outputId": "03d6f658-1ac8-4b23-c42e-71fbea9ae07b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> lock alice 1e+20 1.0000057077635572e+20\n",
+            "user infos {'shares': 1.0000057077635572e+20, 'lastDepositedTime': 1675308224, 'tokenAtLastUserAction': 9.999942916656634e+19, 'lastUserActionTime': 1675308224, 'lockStartTime': 1675308224, 'lockEndTime': 1675308404, 'userBoostedShare': 570833433659118.9, 'locked': True, 'lockedAmount': 1e+20}\n",
+            "pool balanceOfToken 1e+20\n",
+            "pool totalShares 1.0000057077635572e+20\n",
+            "pool totalBoostDebt 570833433659118.9\n",
+            "pool totalLockedAmount 1e+20\n",
+            "pool harvestRewards 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# after MIN_LOCK_DURATION to withdraw\n",
+        "unlockMinDate = datetime.fromtimestamp(pool.userInfo[alice].getAll()['lastDepositedTime']) + timedelta(seconds=MIN_LOCK_DURATION)\n",
+        "print(\"min unlock datetime\", unlockMinDate)\n",
+        "\n",
+        "shares = 1.0000057077635572e+20\n",
+        "\n",
+        "outAmount = pool.withdraw(shares, 0, alice)\n",
+        "print(\"unlock and withdraw token amount\", outAmount)\n",
+        "print(\"after withdraw user infos\", pool.userInfo[alice].getAll())\n",
+        "\n",
+        "print(\"pool balanceOfToken\", pool.balanceOfToken)\n",
+        "print(\"pool totalShares\", pool.totalShares)\n",
+        "print(\"pool totalBoostDebt\", pool.totalBoostDebt)\n",
+        "print(\"pool totalLockedAmount\", pool.totalLockedAmount)\n",
+        "print(\"pool harvestRewards\", pool.harvestRewards)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SFQrYBbPFQPi",
+        "outputId": "e086b082-fea7-4ae2-c80d-3ca3057c3f8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "min unlock datetime 2023-02-02 03:26:44\n",
+            "==> unlock alice 9.999942916656634e+19\n",
+            "unlock and withdraw token amount 1e+20\n",
+            "after withdraw user infos {'shares': 0.0, 'lastDepositedTime': 1675308224, 'tokenAtLastUserAction': 0, 'lastUserActionTime': 1675308411, 'lockStartTime': 0, 'lockEndTime': 0, 'userBoostedShare': 0, 'locked': False, 'lockedAmount': 0}\n",
+            "pool balanceOfToken 0.0\n",
+            "pool totalShares 0.0\n",
+            "pool totalBoostDebt 0.0\n",
+            "pool totalLockedAmount 0.0\n",
+            "pool harvestRewards 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "datetime.now()"
+      ],
+      "metadata": {
+        "id": "HVBTG9WTGRDK",
+        "outputId": "90218db1-9a55-43a3-acf3-767871edbb49",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "datetime.datetime(2023, 2, 2, 3, 26, 46, 349463)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C2KkDnQCIgvY"
       },
       "execution_count": null,
       "outputs": []
